<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:backgroundTint="@android:color/white">
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/lin_top"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_outline_cloud_upload_24"
                android:text="@string/uploads"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="1"
                android:textSize="12sp"
                android:drawableTint="@android:color/holo_blue_light"
                android:textColor="@android:color/holo_blue_light"
                tools:targetApi="m" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/john"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_lewis"
                android:id="@+id/txt_name"
                android:textSize="24sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_outline_edit_24"
                android:text="@string/edit"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:layout_weight="1"
                android:textSize="12sp"
                android:drawableTint="@android:color/holo_blue_light"
                android:textColor="@android:color/holo_blue_light"
                tools:targetApi="m" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_dashboard"
            android:padding="8dp"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/tertiary_text_light"
            android:id="@+id/sep1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lin_second"
            android:padding="8dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_3k"
                    android:id="@+id/txt_follower_val"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:id="@+id/txt_follower"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:id="@+id/txt_artwork_val"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artworks"
                    android:id="@+id/txt_artwork"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_21"
                    android:id="@+id/txt_exhibition_val"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exhibitions"
                    android:id="@+id/txt_exhibition"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/tertiary_text_light"
            android:id="@+id/sep2"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lin_third"
            android:padding="8dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginEnd="8dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                    android:tint="@android:color/holo_red_light"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_120"
                    android:id="@+id/txt_favorite"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginEnd="8dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_outline_trending_up_24"
                    android:tint="@android:color/holo_blue_dark"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_43k"
                    android:id="@+id/txt_arrow"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginEnd="8dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_share_24"
                    android:tint="@android:color/holo_blue_light"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_3k"
                    android:id="@+id/txt_share"
                    android:textSize="16sp"
                    android:textColor="@android:color/darker_gray"/>

            </LinearLayout>
        </LinearLayout>

        <com.skydoves.colorpickerview.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:palette="@drawable/palettebar" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_tutorial"
        style="@style/CustomTabLayout"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:layout_gravity="left"
        app:tabTextAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:tabMode="fixed"
        tools:ignore="RtlHardcoded" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_tutorial"
        android:background="#f6f6f6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:id="@+id/launcher_screen"
        android:focusable="true"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/app_name"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/art_gallery_center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/bg"
            android:layout_centerInParent="true"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_24"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_marginEnd="12dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:drawableTint="@android:color/white"
            tools:ignore="UnusedAttribute" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me_as_a_collector"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_track"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_24"
            android:text="@string/track_my_application"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="12dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTint="@android:color/darker_gray"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            tools:ignore="UnusedAttribute" />
    </RelativeLayout>
</RelativeLayout>